# rust-web-dev

./: Cargo.toml  Rocket.toml
migrations/2023-06-27-144829_create_user/: up.sql
src/: main.rs  schema.rs
templates/: index.html.tera  login_result.html.tera  reception.html.tera
