[package]
name = "rust-web-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.14.0"
mockall = "0.11.4"
rocket = "0.5.0-rc.3"
# serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars","tera"]

